# lang-hdn

./: CITATION.cff  Links.md  Makefile.am  Makefile.in  NorthernHaidaDisambiguation.md  NorthernHaidaDocumentation.jspwiki  README  README.markdown  README.md  _config.yml  abbreviations-stems-fst-src.md  adjectives-affixes-fst-src.md  adjectives-stems-fst-src.md  adverbs-stems-fst-src.md  autogen.sh  classifiers-affixes-fst-src.md  configure.ac  functions-cg3-src.md  giella-hdn.pc.in  hdn.jspwiki  hdn.md  index-header.md  index.md  language-map.md  lemmacount.json  manifest.toml  manifest.toml.in  nouns-affixes-fst-src.md  nouns-stems-fst-src.md  numerals-stems-fst-src.md  particles-stems-fst-src.md  phonology-fst-src.md  phonology-morphology.md  postpositions-stems-fst-src.md  prefixes-stems-fst-src.md  pronouns-stems-fst-src.md  propernouns-affixes-fst-src.md  root-fst-src.md  root-morphology.md  spellersuggs.json  (+51 more)
.gut/: delta.toml  manifest.toml
am-shared/: phonetics-include.am
badgedata/: speller-suggestions.json
tools/spellcheckers/fstbased/: Makefile.am
tools/spellcheckers/fstbased/desktop/hfst/: Makefile.am  editdist.default.txt  final_strings.default.txt  initial_letters.default.txt  strings.default.regex  strings.default.txt
tools/spellcheckers/fstbased/filters/: Makefile.am  remove-everything-to-the-left-of-space.regex  remove-everything-to-the-right-of-space.regex  remove-space-strings.regex
tools/spellcheckers/fstbased/hfst/: index.xml
tools/spellcheckers/fstbased/mobile/hfst/: Makefile.am  index.xml
tools/spellcheckers/fstbased/vfst/: index.txt
(+416 files in other folders)
